# starlette-demo

./: .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  app.py  dev.sh  pyproject.toml  setup.cfg
app/: __init__.py  auth.py  broadcast.py  config.py  db.py  endpoints.py  exception_handlers.py  logging.py  models.py  redis.py  routes.py  static.py  tasks.py
migrations/: env.py
migrations/versions/: 0974ecc7059c_protocols_table_add_col_is_cool.py  1a9952031305_update_protocols_table_is_cool_col.py  8a4192a2406a_create_protocols_table.py  a5d44f24dd74_protocols_table_create.py
scripts/: README.md  dev  docker_build  docker_push  docker_run  lint  test
static/: asgi.html  broadcast.html  echo.html
tests/: conftest.py  fixtures.py  test_app.py  test_auth.py  test_config.py  test_endpoints.py  test_loggers.py  test_models.py
