[tool.poetry]
name = "wolf-backend"
version = "0.1.0"
description = ""
authors = ["acci <acci.valverde@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
starlette = "^0.11.4"
uvicorn = "^0.7.1"      # dev.sh
aiofiles = "^0.4.0"     # starlette.staticfiles.StaticFiles
sqlalchemy = "^1.3"     # db (orm)
alembic = "^1.0"        # db migrations
databases = "^0.2.2"    # db async integration
aiosqlite = "^0.10.0"   # databases dependency (sqlite)


[tool.poetry.dev-dependencies]
mypy = "^0.701.0"
flake8 = "^3.7"
requests = "^2.21"              # starlette.testclient.TestClient
ipdb = "^0.12.0"
pytest-cov = "^2.7"
sqlalchemy_utils = "^0.33.11"   # used for test utils

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
