[tool.poetry]
name = "wolf-backend"
version = "0.1.0"
description = ""
authors = ["acci <acci.valverde@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
starlette = "^0.25.0"   # asgi framework
uvicorn = "^0.7.1"      # asgi server (dev.sh)
aiofiles = "^0.4.0"     # starlette.staticfiles.StaticFiles
sqlalchemy = "^1.3"     # db abstraction
alembic = "^1.0"        # sqlalchemy migrations
databases = "^0.2.2"    # db async integration
aiosqlite = "^0.10.0"   # databases dependency (sqlite)
redis = "^3.2"          # key
gunicorn = "^19.9"      # production


[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}   # code formatter
isort = "^4.3"                  # sort/style imports
flake8 = "^3.7"                 # style checks
mypy = "^0.701.0"               # type checks
xenon = "^0.5.5"                # cyclomatic complexity checks
pytest-cov = "^2.7"             # test runner
ipdb = "^0.12.0"                # debugger
requests = "^2.21"              # starlette.testclient.TestClient
sqlalchemy_utils = "^0.33.11"

[tool.black]
line-length = 119
target-version = ['py37']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
